parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COMMENT

Grammar

Rule 0     S' -> PROGRAM
Rule 1     empty -> <empty>
Rule 2     PROGRAM -> PROGRAMA ID DOTCOMA VARS FUNCTIONS MAIN
Rule 3     MAIN -> PRINCIPAL r_save_func LPAREN RPAREN r_register_princ VARS BLOQUE
Rule 4     VARS -> VAR VAR_AUX
Rule 5     VARS -> empty
Rule 6     VAR_AUX -> TIPO IDS VAR_AUX
Rule 7     VAR_AUX -> empty
Rule 8     TIPO -> INT r_save_type
Rule 9     TIPO -> FLOAT r_save_type
Rule 10    TIPO -> CHAR r_save_type
Rule 11    TIPO -> STRING r_save_type
Rule 12    IDS -> ID r_register_var ARRDIM DOTCOMA
Rule 13    IDS -> ID r_register_var ARRDIM COMA IDS
Rule 14    ARRDIM -> LSTAPLE EXPRESION RSTAPLE
Rule 15    ARRDIM -> LSTAPLE EXPRESION RSTAPLE LSTAPLE EXPRESION RSTAPLE
Rule 16    ARRDIM -> LSTAPLE EXPRESION COMA EXPRESION RSTAPLE
Rule 17    ARRDIM -> empty
Rule 18    FUNCTIONS -> FUNCTION FUNCTIONS
Rule 19    FUNCTIONS -> empty
Rule 20    FUNCTION -> FUNCION TIPO ID r_save_func r_register_func LPAREN PARAM RPAREN VARS BLOQUE
Rule 21    FUNCTION -> FUNCION VOID r_save_type ID r_save_func r_register_func LPAREN PARAM RPAREN VARS BLOQUE
Rule 22    PARAM -> TIPO ID r_register_var PARENTESIS PARAM_AUX
Rule 23    PARAM_AUX -> COMA PARAM
Rule 24    PARAM_AUX -> empty
Rule 25    PARENTESIS -> LSTAPLE RSTAPLE
Rule 26    PARENTESIS -> LSTAPLE RSTAPLE LSTAPLE RSTAPLE
Rule 27    PARENTESIS -> empty
Rule 28    BLOQUE -> LBRACKET ESTATUTOS RBRACKET
Rule 29    ESTATUTOS -> ESTATUTO ESTATUTOS
Rule 30    ESTATUTOS -> empty
Rule 31    ESTATUTO -> ASIGNACION DOTCOMA
Rule 32    ESTATUTO -> FUN DOTCOMA
Rule 33    ESTATUTO -> COND
Rule 34    ESTATUTO -> WRITE DOTCOMA
Rule 35    ESTATUTO -> READ DOTCOMA
Rule 36    ESTATUTO -> RETURN DOTCOMA
Rule 37    ASIGNACION -> ID ARRDIM EQUAL EXPRESION
Rule 38    ASIGNACION -> ID ARRDIM EQUAL CTE_ARR
Rule 39    EXPRESION -> SUBEXP r_seen_subexp AND r_seen_operator SUBEXP r_seen_subexp
Rule 40    EXPRESION -> SUBEXP r_seen_subexp OR r_seen_operator SUBEXP r_seen_subexp
Rule 41    EXPRESION -> SUBEXP r_seen_subexp
Rule 42    SUBEXP -> EXP r_seen_exp
Rule 43    SUBEXP -> EXP r_seen_exp COMPARACION r_seen_operator EXP r_seen_exp
Rule 44    COMPARACION -> MORE
Rule 45    COMPARACION -> LESS
Rule 46    COMPARACION -> COMPARE
Rule 47    COMPARACION -> DIFFERENT
Rule 48    COMPARACION -> MOREEQUAL
Rule 49    COMPARACION -> LESSEQUAL
Rule 50    EXP -> TERMINO r_seen_term
Rule 51    EXP -> TERMINO r_seen_term PLUS r_seen_operator EXP r_seen_exp
Rule 52    EXP -> TERMINO r_seen_term MINUS r_seen_operator EXP r_seen_exp
Rule 53    TERMINO -> FACTOR r_seen_factor
Rule 54    TERMINO -> FACTOR r_seen_factor MULT r_seen_operator TERMINO r_seen_term
Rule 55    TERMINO -> FACTOR r_seen_factor DIV r_seen_operator TERMINO r_seen_term
Rule 56    TERMINO -> FACTOR r_seen_factor MOD r_seen_operator TERMINO r_seen_term
Rule 57    FACTOR -> LPAREN r_seen_operator EXPRESION RPAREN r_seen_operator
Rule 58    FACTOR -> PLUS r_seen_unary_operator CTE
Rule 59    FACTOR -> MINUS r_seen_unary_operator CTE
Rule 60    FACTOR -> NOT r_seen_unary_operator CTE
Rule 61    FACTOR -> CTE ARROP
Rule 62    FACTOR -> CTE
Rule 63    CTE -> CTE_I r_seen_operand
Rule 64    CTE -> CTE_F r_seen_operand
Rule 65    CTE -> CTE_CH r_seen_operand
Rule 66    CTE -> CTE_STRING r_seen_operand
Rule 67    CTE -> FUN
Rule 68    CTE -> ID ARRDIM
Rule 69    ARROP -> DET_ARR
Rule 70    ARROP -> TRANS_ARR
Rule 71    ARROP -> INV_ARR
Rule 72    FUN -> ID LPAREN FUN_AUX RPAREN
Rule 73    FUN_AUX -> EXPRESION COMA FUN_AUX
Rule 74    FUN_AUX -> EXPRESION
Rule 75    FUN_AUX -> empty
Rule 76    COND -> IF
Rule 77    COND -> FOR
Rule 78    COND -> WHILE
Rule 79    IF -> SI LPAREN EXPRESION RPAREN ENTONCES BLOQUE IF_AUX
Rule 80    IF -> SI LPAREN EXPRESION RPAREN ENTONCES COND
Rule 81    IF_AUX -> SINO BLOQUE
Rule 82    IF_AUX -> empty
Rule 83    WHILE -> MIENTRAS LPAREN EXPRESION RPAREN WHILE_AUX BLOQUE
Rule 84    WHILE -> MIENTRAS LPAREN EXPRESION RPAREN WHILE_AUX COND
Rule 85    WHILE_AUX -> HAZ
Rule 86    WHILE_AUX -> empty
Rule 87    FOR -> DESDE ASIGNACION HASTA EXPRESION HACER BLOQUE
Rule 88    FOR -> DESDE ASIGNACION HASTA EXPRESION HACER COND
Rule 89    WRITE -> ESCRIBE LPAREN WRITE_AUX RPAREN
Rule 90    WRITE_AUX -> EXPRESION WRITE_AUXSUB
Rule 91    WRITE_AUXSUB -> COMA WRITE_AUX
Rule 92    WRITE_AUXSUB -> empty
Rule 93    READ -> LEE LPAREN READ_AUX RPAREN
Rule 94    READ_AUX -> ID ARRDIM READ_AUXSUB
Rule 95    READ_AUXSUB -> COMA READ_AUX
Rule 96    READ_AUXSUB -> empty
Rule 97    RETURN -> REGRESA LPAREN EXPRESION RPAREN
Rule 98    RETURN -> REGRESA LPAREN NULL RPAREN
Rule 99    CTE_ARR -> LBRACKET CTE_ARR_AUX RBRACKET
Rule 100   CTE_ARR -> LBRACKET CTE_ARR_AUX2 RBRACKET
Rule 101   CTE_ARR_AUX -> CTE
Rule 102   CTE_ARR_AUX -> CTE_ARR_AUXSUB
Rule 103   CTE_ARR_AUXSUB -> COMA CTE_ARR_AUX
Rule 104   CTE_ARR_AUXSUB -> empty
Rule 105   CTE_ARR_AUX2 -> LBRACKET CTE_ARR_AUX RBRACKET CTE_ARR_AUX2SUB
Rule 106   CTE_ARR_AUX2SUB -> COMA CTE_ARR_AUX2
Rule 107   CTE_ARR_AUX2SUB -> empty
Rule 108   r_save_type -> <empty>
Rule 109   r_save_func -> <empty>
Rule 110   r_register_func -> <empty>
Rule 111   r_register_var -> <empty>
Rule 112   r_register_princ -> <empty>
Rule 113   r_seen_operand -> <empty>
Rule 114   r_seen_operator -> <empty>
Rule 115   r_seen_subexp -> <empty>
Rule 116   r_seen_exp -> <empty>
Rule 117   r_seen_term -> <empty>
Rule 118   r_seen_factor -> <empty>
Rule 119   r_seen_unary_operator -> <empty>

Terminals, with rules where they appear

AND                  : 39
CHAR                 : 10
COMA                 : 13 16 23 73 91 95 103 106
COMMENT              : 
COMPARE              : 46
CTE_CH               : 65
CTE_F                : 64
CTE_I                : 63
CTE_STRING           : 66
DESDE                : 87 88
DET_ARR              : 69
DIFFERENT            : 47
DIV                  : 55
DOTCOMA              : 2 12 31 32 34 35 36
ENTONCES             : 79 80
EQUAL                : 37 38
ESCRIBE              : 89
FLOAT                : 9
FUNCION              : 20 21
HACER                : 87 88
HASTA                : 87 88
HAZ                  : 85
ID                   : 2 12 13 20 21 22 37 38 68 72 94
INT                  : 8
INV_ARR              : 71
LBRACKET             : 28 99 100 105
LEE                  : 93
LESS                 : 45
LESSEQUAL            : 49
LPAREN               : 3 20 21 57 72 79 80 83 84 89 93 97 98
LSTAPLE              : 14 15 15 16 25 26 26
MIENTRAS             : 83 84
MINUS                : 52 59
MOD                  : 56
MORE                 : 44
MOREEQUAL            : 48
MULT                 : 54
NOT                  : 60
NULL                 : 98
OR                   : 40
PLUS                 : 51 58
PRINCIPAL            : 3
PROGRAMA             : 2
RBRACKET             : 28 99 100 105
REGRESA              : 97 98
RPAREN               : 3 20 21 57 72 79 80 83 84 89 93 97 98
RSTAPLE              : 14 15 15 16 25 26 26
SI                   : 79 80
SINO                 : 81
STRING               : 11
TRANS_ARR            : 70
VAR                  : 4
VOID                 : 21
error                : 

Nonterminals, with rules where they appear

ARRDIM               : 12 13 37 38 68 94
ARROP                : 61
ASIGNACION           : 31 87 88
BLOQUE               : 3 20 21 79 81 83 87
COMPARACION          : 43
COND                 : 33 80 84 88
CTE                  : 58 59 60 61 62 101
CTE_ARR              : 38
CTE_ARR_AUX          : 99 103 105
CTE_ARR_AUX2         : 100 106
CTE_ARR_AUX2SUB      : 105
CTE_ARR_AUXSUB       : 102
ESTATUTO             : 29
ESTATUTOS            : 28 29
EXP                  : 42 43 43 51 52
EXPRESION            : 14 15 15 16 16 37 57 73 74 79 80 83 84 87 88 90 97
FACTOR               : 53 54 55 56
FOR                  : 77
FUN                  : 32 67
FUNCTION             : 18
FUNCTIONS            : 2 18
FUN_AUX              : 72 73
IDS                  : 6 13
IF                   : 76
IF_AUX               : 79
MAIN                 : 2
PARAM                : 20 21 23
PARAM_AUX            : 22
PARENTESIS           : 22
PROGRAM              : 0
READ                 : 35
READ_AUX             : 93 95
READ_AUXSUB          : 94
RETURN               : 36
SUBEXP               : 39 39 40 40 41
TERMINO              : 50 51 52 54 55 56
TIPO                 : 6 20 22
VARS                 : 2 3 20 21
VAR_AUX              : 4 6
WHILE                : 78
WHILE_AUX            : 83 84
WRITE                : 34
WRITE_AUX            : 89 91
WRITE_AUXSUB         : 90
empty                : 5 7 17 19 24 27 30 75 82 86 92 96 104 107
r_register_func      : 20 21
r_register_princ     : 3
r_register_var       : 12 13 22
r_save_func          : 3 20 21
r_save_type          : 8 9 10 11 21
r_seen_exp           : 42 43 43 51 52
r_seen_factor        : 53 54 55 56
r_seen_operand       : 63 64 65 66
r_seen_operator      : 39 40 43 51 52 54 55 56 57 57
r_seen_subexp        : 39 39 40 40 41
r_seen_term          : 50 51 52 54 55 56
r_seen_unary_operator : 58 59 60

Parsing method: LALR

state 0

    (0) S' -> . PROGRAM
    (2) PROGRAM -> . PROGRAMA ID DOTCOMA VARS FUNCTIONS MAIN

    PROGRAMA        shift and go to state 2

    PROGRAM                        shift and go to state 1

state 1

    (0) S' -> PROGRAM .



state 2

    (2) PROGRAM -> PROGRAMA . ID DOTCOMA VARS FUNCTIONS MAIN

    ID              shift and go to state 3


state 3

    (2) PROGRAM -> PROGRAMA ID . DOTCOMA VARS FUNCTIONS MAIN

    DOTCOMA         shift and go to state 4


state 4

    (2) PROGRAM -> PROGRAMA ID DOTCOMA . VARS FUNCTIONS MAIN
    (4) VARS -> . VAR VAR_AUX
    (5) VARS -> . empty
    (1) empty -> .

    VAR             shift and go to state 6
    FUNCION         reduce using rule 1 (empty -> .)
    PRINCIPAL       reduce using rule 1 (empty -> .)

    VARS                           shift and go to state 5
    empty                          shift and go to state 7

state 5

    (2) PROGRAM -> PROGRAMA ID DOTCOMA VARS . FUNCTIONS MAIN
    (18) FUNCTIONS -> . FUNCTION FUNCTIONS
    (19) FUNCTIONS -> . empty
    (20) FUNCTION -> . FUNCION TIPO ID r_save_func r_register_func LPAREN PARAM RPAREN VARS BLOQUE
    (21) FUNCTION -> . FUNCION VOID r_save_type ID r_save_func r_register_func LPAREN PARAM RPAREN VARS BLOQUE
    (1) empty -> .

    FUNCION         shift and go to state 11
    PRINCIPAL       reduce using rule 1 (empty -> .)

    FUNCTIONS                      shift and go to state 8
    FUNCTION                       shift and go to state 9
    empty                          shift and go to state 10

state 6

    (4) VARS -> VAR . VAR_AUX
    (6) VAR_AUX -> . TIPO IDS VAR_AUX
    (7) VAR_AUX -> . empty
    (8) TIPO -> . INT r_save_type
    (9) TIPO -> . FLOAT r_save_type
    (10) TIPO -> . CHAR r_save_type
    (11) TIPO -> . STRING r_save_type
    (1) empty -> .

    INT             shift and go to state 15
    FLOAT           shift and go to state 16
    CHAR            shift and go to state 17
    STRING          shift and go to state 18
    FUNCION         reduce using rule 1 (empty -> .)
    PRINCIPAL       reduce using rule 1 (empty -> .)
    LBRACKET        reduce using rule 1 (empty -> .)

    VAR_AUX                        shift and go to state 12
    TIPO                           shift and go to state 13
    empty                          shift and go to state 14

state 7

    (5) VARS -> empty .

    FUNCION         reduce using rule 5 (VARS -> empty .)
    PRINCIPAL       reduce using rule 5 (VARS -> empty .)
    LBRACKET        reduce using rule 5 (VARS -> empty .)


state 8

    (2) PROGRAM -> PROGRAMA ID DOTCOMA VARS FUNCTIONS . MAIN
    (3) MAIN -> . PRINCIPAL r_save_func LPAREN RPAREN r_register_princ VARS BLOQUE

    PRINCIPAL       shift and go to state 20

    MAIN                           shift and go to state 19

state 9

    (18) FUNCTIONS -> FUNCTION . FUNCTIONS
    (18) FUNCTIONS -> . FUNCTION FUNCTIONS
    (19) FUNCTIONS -> . empty
    (20) FUNCTION -> . FUNCION TIPO ID r_save_func r_register_func LPAREN PARAM RPAREN VARS BLOQUE
    (21) FUNCTION -> . FUNCION VOID r_save_type ID r_save_func r_register_func LPAREN PARAM RPAREN VARS BLOQUE
    (1) empty -> .

    FUNCION         shift and go to state 11
    PRINCIPAL       reduce using rule 1 (empty -> .)

    FUNCTION                       shift and go to state 9
    FUNCTIONS                      shift and go to state 21
    empty                          shift and go to state 10

state 10

    (19) FUNCTIONS -> empty .

    PRINCIPAL       reduce using rule 19 (FUNCTIONS -> empty .)


state 11

    (20) FUNCTION -> FUNCION . TIPO ID r_save_func r_register_func LPAREN PARAM RPAREN VARS BLOQUE
    (21) FUNCTION -> FUNCION . VOID r_save_type ID r_save_func r_register_func LPAREN PARAM RPAREN VARS BLOQUE
    (8) TIPO -> . INT r_save_type
    (9) TIPO -> . FLOAT r_save_type
    (10) TIPO -> . CHAR r_save_type
    (11) TIPO -> . STRING r_save_type

    VOID            shift and go to state 23
    INT             shift and go to state 15
    FLOAT           shift and go to state 16
    CHAR            shift and go to state 17
    STRING          shift and go to state 18

    TIPO                           shift and go to state 22

state 12

    (4) VARS -> VAR VAR_AUX .

    FUNCION         reduce using rule 4 (VARS -> VAR VAR_AUX .)
    PRINCIPAL       reduce using rule 4 (VARS -> VAR VAR_AUX .)
    LBRACKET        reduce using rule 4 (VARS -> VAR VAR_AUX .)


state 13

    (6) VAR_AUX -> TIPO . IDS VAR_AUX
    (12) IDS -> . ID r_register_var ARRDIM DOTCOMA
    (13) IDS -> . ID r_register_var ARRDIM COMA IDS

    ID              shift and go to state 25

    IDS                            shift and go to state 24

state 14

    (7) VAR_AUX -> empty .

    FUNCION         reduce using rule 7 (VAR_AUX -> empty .)
    PRINCIPAL       reduce using rule 7 (VAR_AUX -> empty .)
    LBRACKET        reduce using rule 7 (VAR_AUX -> empty .)


state 15

    (8) TIPO -> INT . r_save_type
    (108) r_save_type -> .

    ID              reduce using rule 108 (r_save_type -> .)

    r_save_type                    shift and go to state 26

state 16

    (9) TIPO -> FLOAT . r_save_type
    (108) r_save_type -> .

    ID              reduce using rule 108 (r_save_type -> .)

    r_save_type                    shift and go to state 27

state 17

    (10) TIPO -> CHAR . r_save_type
    (108) r_save_type -> .

    ID              reduce using rule 108 (r_save_type -> .)

    r_save_type                    shift and go to state 28

state 18

    (11) TIPO -> STRING . r_save_type
    (108) r_save_type -> .

    ID              reduce using rule 108 (r_save_type -> .)

    r_save_type                    shift and go to state 29

state 19

    (2) PROGRAM -> PROGRAMA ID DOTCOMA VARS FUNCTIONS MAIN .

    $end            reduce using rule 2 (PROGRAM -> PROGRAMA ID DOTCOMA VARS FUNCTIONS MAIN .)


state 20

    (3) MAIN -> PRINCIPAL . r_save_func LPAREN RPAREN r_register_princ VARS BLOQUE
    (109) r_save_func -> .

    LPAREN          reduce using rule 109 (r_save_func -> .)

    r_save_func                    shift and go to state 30

state 21

    (18) FUNCTIONS -> FUNCTION FUNCTIONS .

    PRINCIPAL       reduce using rule 18 (FUNCTIONS -> FUNCTION FUNCTIONS .)


state 22

    (20) FUNCTION -> FUNCION TIPO . ID r_save_func r_register_func LPAREN PARAM RPAREN VARS BLOQUE

    ID              shift and go to state 31


state 23

    (21) FUNCTION -> FUNCION VOID . r_save_type ID r_save_func r_register_func LPAREN PARAM RPAREN VARS BLOQUE
    (108) r_save_type -> .

    ID              reduce using rule 108 (r_save_type -> .)

    r_save_type                    shift and go to state 32

state 24
